添加文章分类，修复了一些bug
