# docs/swagger.json
@@ -389,6 +389,12 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "description": "类型。1为文章，2为小说",
+                        "name": "type",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
                         "description": "Pages",
                         "name": "page",
                         "in": "formData"
@@ -458,6 +464,13 @@
                         "name": "title",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "类型，1为文章2为小说",
+                        "name": "type",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -498,6 +511,13 @@
                         "type": "string",
                         "description": "分类标题",
                         "name": "title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "类型1为文章。2为小说",
+                        "name": "type",
                         "in": "formData",
                         "required": true
                     }
@@ -541,6 +561,210 @@
                         "description": "分类ID",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/category/archive/": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "必须为管理员",
+                "consumes": [
+                    "text/html"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "archive",
+                    "category",
+                    "admin"
+                ],
+                "summary": "添加文章分类关联",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "文章ID",
+                        "name": "archive",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "分类ID",
+                        "name": "category",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.Response"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "接收者必须为自己管理员",
+                "consumes": [
+                    "text/html"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "archive",
+                    "category",
+                    "admin"
+                ],
+                "summary": "删除文章分类关联",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "小说ID",
+                        "name": "novel",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "分类ID",
+                        "name": "category",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/category/novel/": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "必须为管理员",
+                "consumes": [
+                    "text/html"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "novel",
+                    "category",
+                    "admin"
+                ],
+                "summary": "添加小说分类关联",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "小说ID",
+                        "name": "novel",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "分类ID",
+                        "name": "category",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.Response"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "接收者必须为自己管理员",
+                "consumes": [
+                    "text/html"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "novel",
+                    "category",
+                    "admin"
+                ],
+                "summary": "删除小说分类关联",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "小说ID",
+                        "name": "novel",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "分类ID",
+                        "name": "category",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -639,43 +863,63 @@
                     "application/json"
                 ],
                 "tags": [
-                    "comment"
+                    "novel"
                 ],
-                "summary": "创建评论",
+                "summary": "创建小说",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "评论内容",
+                        "description": "小说标题",
                         "name": "title",
                         "in": "formData",
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "评论类型。小说为：2 文章为：1 其余泽忽略",
-                        "name": "type",
+                        "type": "string",
+                        "description": "小说作者",
+                        "name": "author",
                         "in": "formData",
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "如果type参数为1泽这是文章ID，如果type参数为2则是小说ID",
-                        "name": "raw",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "要返回用户的评论的id",
-                        "name": "reply",
+                        "type": "string",
+                        "description": "小说封面，URL，如果封面为空的话泽会自动替换。默认封面请检查conf.DefaultCover字段",
+                        "name": "cover",
                         "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "小说简介",
+                        "name": "description",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "是否完结",
+                        "name": "ended",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "tags 推荐使用/分割",
+                        "name": "tags",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "目标等级：还未实现",
+                        "name": "level",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.CommentResponse"
+                            "$ref": "#/definitions/serializer.NovelResponse"
                         }
                     },
                     "500": {
@@ -788,7 +1032,12 @@
         },
         "/api/v1/message/": {
             "get": {
-                "description": "必须登陆",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "接收者必须为自己或者权限必须为管理员",
                 "consumes": [
                     "text/html"
                 ],
@@ -798,38 +1047,21 @@
                 "tags": [
                     "message"
                 ],
-                "summary": "分类列表",
+                "summary": "获取消息详细",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Pages",
-                        "name": "page",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Limit",
-                        "name": "limit",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Offset",
-                        "name": "offset",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "PageSize default is 10",
-                        "name": "page_size",
-                        "in": "formData"
+                        "description": "消息ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.MessageListResponse"
+                            "$ref": "#/definitions/serializer.MessageResponse"
                         }
                     },
                     "500": {
